unpackaged/main/default/objects/Single_Barrel_Calendar_Setting__mdt/Single_Barrel_Calendar_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Used in the Single Barrel Program Calendar Component to determine how events for a specific brand will be displayed.  The text color and background color of an event for a particular brand are set in this setting.</description>
    <label>Single Barrel Calendar Setting</label>
    <pluralLabel>Single Barrel Calendar Settings</pluralLabel>
</CustomObject>