unpackaged/main/default/objects/Single_Barrel_Calendar_Setting__mdt/fields/Event_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Event_Text_Color__c</fullName>
    <label>Event Text Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>