unpackaged/main/default/objects/Single_Barrel_Calendar_Setting__mdt/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UTC</fullName>
                <default>true</default>
                <label>UTC</label>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/New_York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>